# vesselflow-pvq-next

./: .gitignore  README.md  pyproject.toml
artifacts/: VF_PVQ_NEXT_MADRE_BACKEND_READY_USDATE.xlsx
contracts/: field_contract.json  menus.json  operational_state_rules.json  operational_window.json
data/: madre_nomination_core.sample.json  source_392_madre.sample.json
docs/: ARCHITECTURE.md  BACKEND_ROUTES.md  FREEZE_MANIFEST.md  OPERATIONAL_STATE_MODEL.md
scripts/: smoke_api.py  validate.sh
snapshots/madre_de_deus/: area_documentos.json  areas.json  evidence.json  full_archive.json  health.json  menus.json  nomination_core.json  operational_state.json  operational_window.json  summary.json
src/pvq_next/: __init__.py  app.py  loader.py  routes.py  service.py  validate_contracts.py
tests/: test_app.py  test_contracts.py
