[project]
name = "vesselflow-pvq-next"
version = "0.1.0"
description = "PVQ Next Operational State read-only backend contracts"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0,<0.28.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
